[package]
name = "tichu-client"
version = "0.1.0"
authors = ["Austin Theriot"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.19"
strum_macros = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = {version = "0.18"}
common = { path = "../common" }
js-sys = "0.3.54"
anyhow = "1.0.44"
bincode = "1.3.3"
lazy_static = "1.4.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
  'WebSocket',
  'Location',
  'Window',
  'FormData',
  'HtmlFormElement',
]
