[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.5.1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bincode = "1.3.3"
unicode-segmentation = "1.8.0"
rand = {version = "0.8.4", default-features = false, features = ["small_rng"]}