[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.1"
futures = { version = "0.3", default-features = false, features = ["alloc", "async-await"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty_env_logger = "0.4.0"
uuid = {version = "0.5.1", features = ["v4"]}
url = "2"
common = { path = "../common" }
bincode = "1.3.3"